--- a/Proyecto/style/esilotproyecto.css
+++ b/Proyecto/style/esilotproyecto.css
@@ -9,8 +9,11 @@
 
 .boton-carga
 {
- 
-   position: absolute;
+  background-color: skyblue;
+  border: double;
+  padding: 15px 30px;
+  text-align: center;
+  font-size: large;
 
 }
 
