--- a/Proyecto/style/esilotproyecto.css
+++ b/Proyecto/style/esilotproyecto.css
@@ -7,14 +7,7 @@
 
 }
 
-.top-intro
-{
-  padding: 50px;
-  border-radius: 10;
-  background-color: rgb(65, 132, 225);
-  text-align: center;
-  border-radius: 10px;
-}
+
 
 .boton-carga
 {
@@ -104,17 +97,59 @@ aside
 
 }
 
-.logo-psag
+.separador-header
 { 
-  display: inline-block;
-  width:20%;
-  height:10%;
+  height: 150px;
+
+}
+
+.top-intro
+{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white; /*tengo las imagenes con fondo blanco =( */
+  z-index: 1000;
+  padding: 10px 20px;
+  
+ 
+}
+.imagenes-logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.logo-psag {
+  width: 15%;
+  max-width: 150px;
+}
+
+.textos-header {
+  text-align: center;
+  flex: 1; /* Hace que el texto ocupe el espacio del medio */
+  margin: 0 20px;
   
 }
-.imagenes-logo
-{
-  display: flex;
-  justify-content: space-between;
-  border-radius: 10px;
 
+.txt-head {
+  margin: 5px 0;
+}
+
+.link-menu
+{
+  font-style: italic;
+
+  color: #ffffff;
+
+}
+
+.li-menu
+{
+  border-style: solid; 
+  border-width: 1px;
+  background-color: #7499d1;
+  padding: 5px;
+  border-radius: 8px;
 }
