--- a/Proyecto/style/EstiloCargaPedidos.css
+++ b/Proyecto/style/EstiloCargaPedidos.css
@@ -1,12 +1,26 @@
-.carga-pedidos
-{   
-    display: grid;
-    flex-direction: column;
-    align-items: center;    
-
-
-}
-#date-fecha-carga
+.container-carga-pedidos
 {
-    
+    display: flex;
+    flex-direction: column;
 }
+
+.clases-datos {
+    margin: 10px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    }
+
+
+
+
+
+
+
+
+
+
+/*#date-fecha-carga
+{
+    hay que usar JS para setear el valor de la fecha actual
+
+}*/
