head en carga pedido

--- a/Proyecto/style/EstiloCargaPedidos.css
+++ b/Proyecto/style/EstiloCargaPedidos.css
@@ -1,7 +1,13 @@
 .container-carga-pedidos
-{
+{   
     display: flex;
-    flex-direction: column;
+    align-content:space-around;
+    height: 50%;
+    flex-wrap: wrap;
+}
+.multilinea-obs
+{ 
+  width: 100%;
 }
 
 .clases-datos {
