--- a/Proyecto/style/esilotproyecto.css
+++ b/Proyecto/style/esilotproyecto.css
@@ -105,7 +105,7 @@ aside
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: white; /*tengo las imagenes con fondo blanco =( */
+  background-color: rgb(160, 187, 237); /*tengo las imagenes con fondo blanco =( */
   z-index: 1000;
   padding: 10px 20px;
   
