error de faltqa de datos en position css

--- a/Proyecto/style/EstiloCargaPedidos.css
+++ b/Proyecto/style/EstiloCargaPedidos.css
@@ -50,7 +50,7 @@
     align-content:space-around;
     height: 50%;
     flex-wrap: wrap;
-    position: 
+    /*position: */
   
 }
 .multilinea-obs
