--- a/Proyecto/style/EstiloCargaPedidos.css
+++ b/Proyecto/style/EstiloCargaPedidos.css
@@ -1,61 +1,22 @@
 .top-introPedidos
 {
+    display: flex;
     position: fixed;
     top: 0;
     width: 100%;
     background-color: rgb(160, 187, 237); 
-    z-index: 1000;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;  
-
-}
-
-.menu-foot-pedidos
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(160, 187, 237); 
-    padding: 10px 20px;
-    border-radius: 10px;
-    margin-left: 0px;
-    margin-right: 0px;
-    width: 100%;
-    text-decoration: none;
-    font-size: larger;
-    position:relative;
-    ul
-    {
-    display:flex;
-    flex-direction:row;
-    justify-content:space-evenly;
-    }
-    li{display: inline;}
-    a
-    { text-decoration: none;    
-      color: #000000;
-      
-    }
-}
-
-
-
-
-
-
-.container-carga-pedidos
-{   
-    display: flex;
-    align-content:space-around;
     height: 50%;
+    padding: 10px 20px;
+    justify-content: space-between;  
+    
     flex-wrap: wrap;
-    position: 
-  
+
 }
+
 .multilinea-obs
 { 
   width: 100%;
+  resize: none;
 }
 
 .clases-datos {
@@ -64,11 +25,51 @@
     border: 1px solid #ccc;
     }
 
+.label-datos
+{
+    
+    display: block;
+    align-items: center;
+}
 
+.formulario-pedidos 
+{
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    gap: 20px; /* Espacio entre los botones */
+    margin-top: 20px;
+}
 
+.botones-pedidos {
+    width: 100px; /* o cualquier ancho deseado */
+    padding: 8px;
+    font-size: 10px;
+    border-radius: 8px;
+    font-size:small;
+}
 
+.carga-pedidos-data {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; /* Espacio vertical entre líneas */
+    margin-top: 20px;
+    max-width: 500px; /* Opcional, para limitar el ancho */
+}
 
+.carga-pedidos-data label {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px; 
+}
 
+.carga-pedidos-data input {
+    width: 100px; /* O el tamaño que prefieras */
+    padding: 5px;
+}
 
 
 
