--- a/Proyecto/style/EstiloCargaPedidos.css
+++ b/Proyecto/style/EstiloCargaPedidos.css
@@ -1,68 +1,69 @@
-.top-introPedidos
+.top-intro-pedidos
 {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: rgb(160, 187, 237); 
-    z-index: 1000;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;  
-
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: rgb(160, 187, 237); /*tengo las imagenes con fondo blanco =( */
+  z-index: 1000;
+  padding: 10px 20px;
+  
+ 
 }
-
-.menu-foot-pedidos
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(160, 187, 237); 
-    padding: 10px 20px;
-    border-radius: 10px;
-    margin-left: 0px;
-    margin-right: 0px;
-    width: 100%;
-    text-decoration: none;
-    font-size: larger;
-    position:relative;
-    ul
-    {
-    display:flex;
-    flex-direction:row;
-    justify-content:space-evenly;
-    }
-    li{display: inline;}
-    a
-    { text-decoration: none;    
-      color: #000000;
-      
-    }
-}
-
-
-
-
-
 
 .container-carga-pedidos
-{   
-    display: flex;
-    align-content:space-around;
-    height: 50%;
-    flex-wrap: wrap;
-    /*position: */
-  
+{
+    position: static;
+
+
 }
+
 .multilinea-obs
 { 
   width: 100%;
 }
 
-.clases-datos {
+.clases-datos 
+{
     margin: 10px;
     padding: 5px;
     border: 1px solid #ccc;
-    }
+}
+.formulario-pedidos 
+{
+    display: flex;
+    flex-direction: column;
+    
+    max-width: 500px;
+    margin: 0 auto; 
+    padding: 5%;
+}
+.botones-pedidos {
+    width: 100px; 
+    padding: 8px;
+    font-size: 10px;
+    border-radius: 8px;
+    font-size:small;
+}
+
+.carga-pedidos-data {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; 
+    margin-top: 20px;
+    max-width: 500px; 
+}
+
+.carga-pedidos-data label {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px; 
+}
+
+.carga-pedidos-data input {
+    width: 100px; 
+    padding: 5px;
+}
 
 
 .
