--- a/Proyecto/style/EstiloCargaPedidos.css
+++ b/Proyecto/style/EstiloCargaPedidos.css
@@ -1,11 +1,13 @@
 .top-intro-pedidos
 {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color: rgb(160, 187, 237); /*tengo las imagenes con fondo blanco =( */
-  z-index: 1000;
-  padding: 10px 20px;
+    display: flex;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: rgb(160, 187, 237); 
+    height: 50%;
+    padding: 10px 20px;
+    justify-content: space-between;
   
  
 }
@@ -32,23 +34,28 @@
 {
     display: flex;
     flex-direction: column;
+    position: relative;
     
     max-width: 500px;
     margin: 0 auto; 
     padding: 5%;
 }
 .botones-pedidos {
-    width: 100px; 
-    padding: 8px;
-    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    gap: 30px; /* Espacio entre los botones */
+    width: 25%; 
+    align-items: center;
+    font-size: medium;
     border-radius: 8px;
-    font-size:small;
+    padding: 8px;
 }
 
 .carga-pedidos-data {
     display: flex;
     flex-direction: column;
-    gap: 10px; 
+    position: relative;
+    gap: 20px; 
     margin-top: 20px;
     max-width: 500px; 
 }
@@ -66,7 +73,6 @@
 }
 
 
-.
 
 
 
