--- a/Proyecto/style/esilotproyecto.css
+++ b/Proyecto/style/esilotproyecto.css
@@ -12,7 +12,8 @@
 .boton-carga
 {
   background-color: rgb(160, 187, 237);
-  border: double;
+  border: none; 
+  border-radius: 8px;
   padding: 15px 30px;
   text-align: center;
   font-size: large;
