--- a/Proyecto/style/EstiloCargaPedidos.css
+++ b/Proyecto/style/EstiloCargaPedidos.css
@@ -11,7 +11,12 @@
   
  
 }
-
+@media (max-width: 768px) {
+    .top-intro-pedidos {
+      position: static;
+      height: auto;
+    }
+}    
 .container-carga-pedidos
 {
     position: static;
@@ -35,43 +40,77 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    align-items: center;
     
-    max-width: 500px;
+    max-width: 75%;
     margin: 0 auto; 
     padding: 5%;
 }
-.botones-pedidos {
-    display: flex;
-    justify-content: center;
-    gap: 30px; /* Espacio entre los botones */
-    width: 25%; 
-    align-items: center;
-    font-size: medium;
-    border-radius: 8px;
-    padding: 8px;
-}
 
 .carga-pedidos-data {
+    
+    margin-top: 15%;
     display: flex;
     flex-direction: column;
-    position: relative;
-    gap: 20px; 
-    margin-top: 20px;
-    max-width: 500px; 
+    gap: 20px;
+    width: 500px;
+    padding: 30px;
 }
 
 .carga-pedidos-data label {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 10px; 
+    gap: 30px; 
 }
-
 .carga-pedidos-data input {
     width: 100px; 
     padding: 5px;
 }
 
+
+.contenedor-botones {
+    margin-top:5%;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+  
+.contenedor-botones button {
+    padding: 8px 16px;
+    border-radius: 6px;
+ 
+}
+.cod-prod-cant
+{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    gap: 30px; 
+    margin-top:10%;
+    width: 500px;
+}
+.cod-prod-cant input {
+    width: 100px; 
+    padding: 5px;
+}
+
+#datepicker-fechas-pedido
+{
+    display: inline-block;
+    margin-right: 5%;    
+    
+    
+    gap: 30px;    
+}
+
+  
+#observaciones-multilinea
+{
+
+    margin-top: 10%;
+
+}
 
 
 
