--- a/Proyecto/style/EstiloCargaPedidos.css
+++ b/Proyecto/style/EstiloCargaPedidos.css
@@ -21,7 +21,19 @@
 
 .multilinea-obs
 { 
-  width: 100%;
+    display: inherit; /*deja de heredar de padre*/
+    height: 100px;
+    width: 600px;
+    margin: 20px 0;
+}
+
+.multilinea-obs label
+{
+    display: block; 
+    text-align: left; 
+    /*margin-left: 20px;*/
+    margin-bottom: 10px;
+
 }
 
 .clases-datos 
@@ -42,26 +54,15 @@
     padding: 5%;
 }
 
-.carga-pedidos-data {
-    
-    margin-top: 15%;
+.carga-pedidos-data 
+{
     display: flex;
     flex-direction: column;
+    margin-top: 15%;
     gap: 20px;
     width: 500px;
     padding: 30px;
 }
-
-.Lbl-form
-{
-
-    padding-right: 15px;
-   
-
-}
-
-
-
 
 .contenedor-botones {
     margin-top:5%;
@@ -92,10 +93,13 @@
 #datepicker-fechas-pedido
 {
     display: inline-block;
+    position: inherit;
     margin-right: 5%;    
-    
-    
     gap: 30px;    
+}
+.date-fecha-carga
+{
+    margin-right: 5%;
 }
 
   
