--- a/Proyecto/style/esilotproyecto.css
+++ b/Proyecto/style/esilotproyecto.css
@@ -1,3 +1,15 @@
+.top-intro
+{
+  background-color: rgb(160, 187, 237);
+  border-radius: 10px;
+  width: 100%;
+  height: 25%;
+  position: fixed;
+  
+ 
+}
+
+
 .descripcion-prod
 {
     text-align: left;
@@ -17,9 +29,17 @@
  
 .menu-foot
 {
-    text-decoration: none;
-    font-size: larger;
-    position:relative;
+    
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  text-align: center;
+  font-size: larger;
+  position: relative;
+  padding: 2%;
+    
+    
+    
     ul
     {
     display:flex;
@@ -77,20 +97,19 @@ aside
 
 .top-intro
 {
-  position: fixed;
-  top: 0;
+  background-color: rgb(160, 187, 237);
+  border-radius: 10px;
   width: 100%;
-  background-color: rgb(160, 187, 237); /*tengo las imagenes con fondo blanco =( */
-  z-index: 1000;
-  padding: 10px 20px;
+  height: 20%;
   
  
 }
 .imagenes-logo {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2%;
+    height: 10%;
 }
 
 .logo-psag {
