--- a/Proyecto/style/esilotproyecto.css
+++ b/Proyecto/style/esilotproyecto.css
@@ -3,10 +3,19 @@
   background-color: rgb(160, 187, 237);
   border-radius: 10px;
   width: 100%;
-  height: 25%;
+  height: 22%;
   position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1;
   
- 
+}
+.menu-lateral
+{
+  position: fixed;
+  top: 21%;
+  left: 0;
+  
 }
 
 
@@ -21,9 +30,11 @@
 .prod-container
 {
   display: flex;
-  align-content:space-around;
-  height: 50%;
-  flex-wrap: wrap; 
+  align-content: center;
+  height: 100%;
+  margin-top: 10%;
+  flex-wrap: wrap;
+  margin-left: 15%;
   
 }
  
@@ -31,12 +42,12 @@
 {
     
   width: 100%;
-  height: 100%;
+  
   text-decoration: none;
   text-align: center;
   font-size: larger;
   position: relative;
-  padding: 2%;
+  padding: 10px;
     
     
     
