se logro poner el date now en el script de carga de pedidos se tuvo que generar un nuevo archivo JS por que si no rompia el script de catalogo

--- a/Proyecto/style/EstiloCargaPedidos.css
+++ b/Proyecto/style/EstiloCargaPedidos.css
@@ -91,15 +91,10 @@
 
 }
 
+#fecha-actual
+{   
+    text-align: center;
+    border: 1px solid #090707;
 
 
-
-
-
-
-
-/*#date-fecha-carga
-{
-    hay que usar JS para setear el valor de la fecha actual
-
-}*/
+}
