--- a/Proyecto/style/esilotproyecto.css
+++ b/Proyecto/style/esilotproyecto.css
@@ -1,10 +1,28 @@
+body {
+  
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+/* Media Query para dispositivos móviles (máximo 768px) */
+@media only screen and (max-width: 768px) {
+  body {
+    font-size: 14px; /* Reducir el tamaño de la fuente */
+    width: 95%;      /* Aumentar el ancho para pantallas pequeñas */
+  }
+  /* Otros estilos para dispositivos móviles */
+}
+
+
+
 .top-intro
 {
-  background-color: rgb(160, 187, 237);
+  position: fixed;
+  background-color:#3871c5;
   border-radius: 10px;
   width: 100%;
   height: 22%;
-  position: fixed;
   left: 0;
   top: 0;
   z-index: 1;
@@ -12,11 +30,12 @@
 }
 .menu-lateral
 {
-  position: fixed;
-  top: 20.5%;
-  left: 0;
+  display: flex;
+  flex-wrap: wrap;
   width: 200px;
-  height: 200px;
+  margin-top: 9.9%;
+  margin-left: -0.5%;
+
   #lbl-buscar
   {
     position: relative;
@@ -30,81 +49,52 @@
   
 }
 
-
-/*.descripcion-prod
-{
-    text-align: left;
-    font-style: italic;
-    font-size: medium;
-    font-weight: bold;
-
-}*/
 .prod-container
 {
-  display: flex;
+  display: grid;
   align-content: center;
   height: 100%;
   margin-top: 10%;
-  flex-wrap: wrap;
-  margin-left: 15%;
-
-  
-}
- 
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  margin-left: 15%; 
+} 
 .menu-foot
 {
-    
+   
   width: 100%;
-  
   text-decoration: none;
   text-align: center;
   font-size: larger;
   position: relative;
   padding: 10px;
-    
-    
-    
+  background-color: #3871c5;
+  
     ul
     {
     display:flex;
     flex-direction:row;
-    justify-content:space-evenly;
+    justify-content:space-around;
     }
-    li{display: inline;}
+    li{display: inline;
+    background-color: #434547;}
     a
     { text-decoration: none;    
-      color: #000000;
+      color: #ffffff;
       
     }
-}
-  
+} 
 
 .img-ph
 {
   display: flex;
-
+  justify-content: left;
   width: 300px;
   height: 300px;
   
 }
 
-.nombre-prod
-{
-  text-align:left;
-  font-weight: bold;
- 
-}
-.descripcion-prod
-{
-  white-space: pre-wrap;
-  text-align: left;
-  font-style: italic;
-  font-size: medium;  
-  
-  line-height: 1.5;  
-}
-
-footer{ position: center;}
+footer { position: center; }
 
 aside 
 {
@@ -112,7 +102,7 @@ aside
   padding-left: 10px;
   margin-left: 0px;
   float: left;
-  background-color: rgb(160, 187, 237);
+  background-color: #3871c5;
   border-radius: 10px;
   
 }
@@ -132,7 +122,7 @@ aside
 
 .top-intro
 {
-  background-color: rgb(160, 187, 237);
+  background-color: #3871c5;
   border-radius: 10px;
   width: 100%;
   height: 20%;
@@ -168,19 +158,61 @@ aside
 {
   border-style: solid; 
   border-width: 1px;
-  background-color: #7499d1;
+  background-color: #3871c5;
   padding: 5px;
-  border-radius: 8px;
+  border-radius: 10px;
 }
 
 #btn-add-products
 {
-  background-color: #7499d1;
+  display: block;
+  justify-content: center;
+  background-color: #3871c5;
   color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  
+  padding: 5px 30px;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 10px auto;
+  font-size: large;
+  margin-top: 8%;
+}
+.descripcion-prod
+{
+  text-align: left;
+  display: inline;
+  font-style: italic;
+  font-size: medium;
+  font-weight: bold;
+  line-height: 1.5;
+  display: flex
+;
+
+}
+.precio-prod
+{
+  text-align: left;
+  font-style: italic;
+  font-size: larger;
+  font-weight: bold;
+  line-height: 1.5;  
+}
+.nombre-prod
+{
+  text-align:left;
+  font-weight: bold;
 }
 
+.btn-comprar
+{
+  display: block;
+  justify-content: center;
+  background-color: #3871c5;
+  color: white;
+  border: none;
+  padding: 20px auto;
+  border-radius: 5px;
+  cursor: pointer;
+  
+
+}
   
