--- a/Proyecto/style/EstiloCargaPedidos.css
+++ b/Proyecto/style/EstiloCargaPedidos.css
@@ -1,5 +1,10 @@
 
+.Container-carga-pedidos
+{
+   
 
+    padding-top: 20vh;
+}
 .multilinea-obs
 { 
     display: inherit; /*deja de heredar de padre*/
@@ -28,7 +33,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 25vh;
+    
 }
 
 
