--- a/Proyecto/style/esilotproyecto.css
+++ b/Proyecto/style/esilotproyecto.css
@@ -19,12 +19,10 @@ body {
 .top-intro
 {
   position: fixed;
-  background-color:#3871c5;
+  background-color: #3871c5;
   border-radius: 10px;
   width: 100%;
   height: 22%;
-  left: 0;
-  top: 0;
   z-index: 1;
   
 }
@@ -33,8 +31,10 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: 200px;
-  margin-top: 9.9%;
-  margin-left: -0.5%;
+  
+  margin-top: 18vh;
+  margin-left: 0vh;
+  background-color: #43454773;
 
   #lbl-buscar
   {
@@ -67,8 +67,8 @@ body {
   text-align: center;
   font-size: larger;
   position: relative;
-  padding: 10px;
-  background-color: #3871c5;
+  padding: 5px;
+  
   
     ul
     {
@@ -77,7 +77,7 @@ body {
     justify-content:space-around;
     }
     li{display: inline;
-    background-color: #434547;}
+    background-color: #43454773;}
     a
     { text-decoration: none;    
       color: #ffffff;
