--- a/Proyecto/style/proyecto.css
+++ b/Proyecto/style/proyecto.css
@@ -233,14 +233,23 @@ aside
 }
 #institucional
 {
-padding-top: 20vh;
-padding-left: 2vb;
+  margin-top: 10vh;
+  padding: 2vh 2vw;
+  border: #3871c5 solid 3px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  width: 80vh;
+  height: 45vh;
+
 }
 #contenido-nostros
 {
   background-image: url(../img/home_bg_color.jpg);
   width: 100%;
-  max-height: fit-content;
+  padding-top: 20vh;
+  min-height: 80vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 
 
 }
