--- a/Proyecto/style/proyecto.css
+++ b/Proyecto/style/proyecto.css
@@ -1,10 +1,52 @@
-/* Media Query para dispositivos móviles (máximo 768px) */
-@media only screen and (max-width: 768px) {
-  body {
-    font-size: 14px; 
-    width: 100%;      /*toda la pantalla de ancho para salida de viewports en celus*/
-  }
+
+ 
+@media screen and (min-width: 600px) {
+  /*For Tablets*/
+      .container {
+          width: 100;
+      }
 }
+  
+@media screen and (min-width: 768px) {
+  /*For Laptops*/
+      .container 
+      {
+          width: 738px;
+      }
+}
+  
+@media screen and (min-width: 992px) {
+  /*For Large Laptops*/
+      .container 
+      {
+          width: 962px;
+      }
+}
+  
+@media screen and (min-width: 1280px) {
+  /*For Big TV's (HD Screens) */
+      .container 
+      {
+          width: 1250px;
+      }
+}  
+  
+@media screen and (min-width: 1920px) {
+  /*For Projectors or Higher Resolution Screens (Full HD)*/
+      .container 
+      {
+          width: 1890px;
+      }
+}
+  
+@media screen and (min-width: 3840px) {
+  /*For 4K Displays (Ultra HD)*/
+      .container 
+      {
+          width: 3810px;
+      }
+}
+
 body {  
   width: 100%;
   height: 100%;
@@ -20,6 +62,37 @@ body {
   z-index: 1;
   
 }
+.img-ph
+{
+  display: flex;
+  justify-content: left;
+  width: 300px;
+  height: 300px;
+  
+}
+.menu-foot
+{
+  width: 100%;
+  text-decoration: none;
+  text-align: center;
+  font-size: larger;
+  position: relative;
+  padding: 5px;
+    
+    ul
+    {
+    display:flex;
+    flex-direction:row;
+    justify-content:space-around;
+    }
+    li{display: inline;
+    background-color: #43454773;}
+    a
+    { text-decoration: none;    
+      color: #ffffff;
+      
+    }
+} 
 .menu-lateral
 {
   display: flex;
@@ -65,40 +138,6 @@ body {
   cursor: pointer;  
   
 }
-.menu-foot
-{
-   
-  width: 100%;
-  text-decoration: none;
-  text-align: center;
-  font-size: larger;
-  position: relative;
-  padding: 5px;
-  
-  
-    ul
-    {
-    display:flex;
-    flex-direction:row;
-    justify-content:space-around;
-    }
-    li{display: inline;
-    background-color: #43454773;}
-    a
-    { text-decoration: none;    
-      color: #ffffff;
-      
-    }
-} 
-
-.img-ph
-{
-  display: flex;
-  justify-content: left;
-  width: 300px;
-  height: 300px;
-  
-}
 
 footer { position: center; }
 
@@ -133,8 +172,8 @@ aside
   width: 100%;
   height: 20%;
   
- 
 }
+
 .imagenes-logo {
     display: flex;
     align-items: center;
@@ -227,77 +266,3 @@ aside
   border-radius: 5px;
   cursor:text;  
 }
-#institucional
-{
-  margin-top: 10vh;
-  padding: 2vh 2vw;
-  border: #3871c5 solid 3px;
-  background-color: #ffffff;
-  border-radius: 10px;
-  width: 80vh;
-  height: 25vh;
-  p { 
-    text-align: justify;
-    font-size:medium;
-    } 
-}
-#contenido-nostros
-{
-  background-image: url(../img/home_bg_color.jpg);
-  width: 100%;
-  padding-top: 20vh;
-  min-height: 80vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-}
-
-#flex-busqueda-pedido
-{ 
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-  width: 500px;
-  padding: 10px;
-  flex-wrap: wrap;
-  align-content: center;
-  align-items: flex-end;
-  input
-  {
-      padding: 10px;
-      border-radius: 10px;
-      border: 1px solid #3871c5;
-      width: 150px;
-      height: 5px;
-  }
-  
-}
-#btn-buscar-pedido{
-
-  display: block;
-  justify-content: center;
-  background-color: #3871c5;
-  color: white;
-  padding: 5px 30px;
-  border-radius: 10px;
-  cursor: pointer;
-  font-size: large;
-
-}
-
-#tabla-resultado
-{
-  border-collapse: collapse;
-  width: 50vh;
-  border: #3871c5 solid 3px;
-  border-radius: 8px;
-  margin-top: 5vh;
-  margin-left: 5vh; 
-  background-color: #ffffff;
-  th, td {
-    border: #3871c5 solid 3px;
-    padding: 10px;
-    text-align: center;
-  }
-}
-  
