--- a/Proyecto/style/proyecto.css
+++ b/Proyecto/style/proyecto.css
@@ -56,7 +56,7 @@ body {
 {
   position: fixed;
   background-color: #3871c5;
-  border-radius: 10px;
+  border-radius: 2%;
   width: 100%;
   height: 22%;
   z-index: 1;
