--- a/Proyecto/style/proyecto.css
+++ b/Proyecto/style/proyecto.css
@@ -1,52 +1,3 @@
-
- 
-@media screen and (min-width: 600px) {
-  /*For Tablets*/
-      .container {
-          width: 100;
-      }
-}
-  
-@media screen and (min-width: 768px) {
-  /*For Laptops*/
-      .container 
-      {
-          width: 738px;
-      }
-}
-  
-@media screen and (min-width: 992px) {
-  /*For Large Laptops*/
-      .container 
-      {
-          width: 962px;
-      }
-}
-  
-@media screen and (min-width: 1280px) {
-  /*For Big TV's (HD Screens) */
-      .container 
-      {
-          width: 1250px;
-      }
-}  
-  
-@media screen and (min-width: 1920px) {
-  /*For Projectors or Higher Resolution Screens (Full HD)*/
-      .container 
-      {
-          width: 1890px;
-      }
-}
-  
-@media screen and (min-width: 3840px) {
-  /*For 4K Displays (Ultra HD)*/
-      .container 
-      {
-          width: 3810px;
-      }
-}
-
 body {  
   width: 100%;
   height: 100%;
@@ -55,10 +6,9 @@ body {
 .top-intro
 {
   position: fixed;
-  background-color: #3871c5;
-  border-radius: 2%;
+  background-color: #3871c5;  
   width: 100%;
-  height: 22%;
+  height: 22vh;
   z-index: 1;
   
 }
@@ -163,15 +113,6 @@ aside
 { 
   height: 150px;
 
-}
-
-.top-intro
-{
-  background-color: #3871c5;
-  border-radius: 10px;
-  width: 100%;
-  height: 20%;
-  
 }
 
 .imagenes-logo {
