--- a/Proyecto/style/proyecto.css
+++ b/Proyecto/style/proyecto.css
@@ -161,11 +161,12 @@ footer a {
   flex-direction: column;
   justify-content: space-between;
   transition: transform 0.3s;
+  
 }
 
-.card-product:hover {
-  transform: scale(1.02);
-}
+/*.card-product:hover {
+  transform: scale(1.005);
+}*/
 
 .card-product img {
   width: 100%;
@@ -189,6 +190,16 @@ footer a {
   margin: 10px 0;
   flex-grow: 1;
 }
+.descripcion-prod {
+  transition: all 0.3s ease;
+}
+
+.descripcion-prod:hover {
+  background-color: #f0f0f0;
+  transform: scale(1.5);
+  padding: 8px;
+  border-radius: 6px;
+}
 
 .precio-prod {
   font-weight: bold;
@@ -207,7 +218,9 @@ footer a {
 }
 
 .btn-agregar-carrito:hover {
-  background-color: #004080;
+      background-color: #003e85;
+      color: white;
+      transition: 0.3s;
 }
 @media screen and (max-width: 768px) {
     main {
@@ -234,6 +247,7 @@ footer a {
     flex-direction: column;
     align-items: center;
   }
+  
 }
 #btn-flotante {
   position: fixed;
