--- a/Proyecto/style/nostros.css
+++ b/Proyecto/style/nostros.css
@@ -8,8 +8,15 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
 }
-
+html, body {
+  height: 100%;
+}
+#contenido-nostros {
+  flex: 1;
+}
 .top-intro {
   background: linear-gradient(to right, #002147, #dcdcdc);
   padding: 10px 20px;
@@ -112,6 +119,7 @@ footer a {
   text-decoration: none;
   color: #f0c040;
   font-weight: bold;
+  
 }
 
 /* Responsive ajustes */
