se creo login.html para validar y de ahi ira a la admin de productos sin que quede expuesta por el index

--- a/Proyecto/style/contacto.css
+++ b/Proyecto/style/contacto.css
@@ -157,3 +157,27 @@ footer a {
     flex-direction: column;
   }
 }
+#inputs-login
+{
+
+
+
+
+
+
+}
+
+#inputs-login button{
+
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  background-color: #3871c5;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  flex: 1;
+}
+#inputs-login button:hover{
+  background-color: #265a9c;
+}
