--- a/Proyecto/style/altaprod.css
+++ b/Proyecto/style/altaprod.css
@@ -4,12 +4,7 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
-  display: flex;
-  flex-direction: column;
-}
+
 html, body {
   height: 100%;
 }
@@ -176,10 +171,14 @@ form#add-product-form button[type="submit"] {
 form#add-product-form button[type="submit"]:hover {
   background: #003366;
 }
-
-
+#btn-cancelar:hover {
+  background: #262729db; 
+}
 
 @media (max-width: 900px) {
+  body {
+    font-size: 26px;
+  }
   main {
     min-height: auto; 
     margin: 0 15px;
@@ -192,6 +191,9 @@ form#add-product-form button[type="submit"]:hover {
 @media (max-width: 480px) {
   body {
     padding: 10px;
+   
+    font-size: 26px;
+  
   }
 
   main {
