verificacion de form contacto

--- a/Proyecto/style/verpedidos.css
+++ b/Proyecto/style/verpedidos.css
@@ -23,7 +23,7 @@ body {
 }
 
 .top-intro h1 {
-  color: black;
+  color: rgb(255, 255, 255);
   font-weight: bold;
   text-align: center;
   font-size: 1.6rem;
