--- a/Proyecto/style/altaprod.css
+++ b/Proyecto/style/altaprod.css
@@ -6,7 +6,12 @@
 
 
 html, body {
-  height: 100%;
+  /*height: 100%;*/
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .top-intro {
