--- a/Proyecto/style/contacto.css
+++ b/Proyecto/style/contacto.css
@@ -7,12 +7,27 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f5f5f5;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.prueba-container
+{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 .top-intro {
   background-color: #002147;
   color: white;
   padding: 10px 20px;
   text-align: center;
+}
+.top-intro h1 {
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-align: center;
+  font-size: 1.6rem;
 }
 
 .imagenes-logo {
@@ -125,10 +140,6 @@ body {
   background-color: #265a9c;
 }
 
-
-
-
-
 @media screen and (max-width: 768px) {
   .imagenes-logo {
     flex-direction: column;
@@ -144,3 +155,4 @@ body {
     flex-direction: column;
   }
 }
+
