--- a/Proyecto/style/proyecto.css
+++ b/Proyecto/style/proyecto.css
@@ -24,7 +24,7 @@ body {
 }
 
 .top-intro h1 {
-  color: black;
+  color: rgb(255, 255, 255);
   font-weight: bold;
   text-align: center;
   font-size: 1.6rem;
