--- a/Proyecto/style/contacto.css
+++ b/Proyecto/style/contacto.css
@@ -155,6 +155,8 @@ footer a {
 }
 
 @media screen and (max-width: 768px) {
+  
+  
   .carga-pedidos-data,
   #datepicker-fechas-pedido,
   .cod-prod-cant {
@@ -203,6 +205,9 @@ footer a {
 }
 
 @media screen and (max-width: 768px) {
+  body {
+  padding-top: 180px; 
+  }
   .menu-foot li {
     margin: 5px 0;
     width: 80%;
